[package]
name = "tokio-minihttp"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
bytes = { git = "https://github.com/carllerche/bytes" }
env_logger = "0.3.4"
futures = { git = "https://github.com/alexcrichton/futures-rs" }
futures-io = { git = "https://github.com/alexcrichton/futures-rs" }
futures-mio = { git = "https://github.com/alexcrichton/futures-rs" }
tokio-ssl = { git = "https://github.com/tokio-rs/tokio-ssl" }
httparse = "1.1.2"
log = "0.3.6"
time = "0.1"
tokio = { git = "https://github.com/tokio-rs/tokio" }

[dev-dependencies]
openssl = "0.8.0"
